# Auspicious

./: .gitignore  CHANGELOG.md  CLAUDE.md  docker-compose.prod.yml  docker-compose.yml  好日子_專案開發計畫書_PM視角.md  好日子_技術架構文件_工程師視角.md
backend/: Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
backend/app/: __init__.py  cli.py  config.py  database.py  main.py
backend/app/analytics/: __init__.py  engine.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  ai.py  daily_report.py  day_insight.py  line_webhook.py  lunar.py  planner.py  proverb.py  solar_term.py  stations.py  weather.py
backend/app/models/: __init__.py  observation.py  station.py  statistics.py
backend/app/schemas/: __init__.py  common.py  day_insight.py  lunar.py  weather.py
backend/app/services/: __init__.py  ai_engine.py  cwa_sync.py  decade_stats.py  lunar.py  notification.py  planner.py  proverb.py  proverb_verify.py  realtime_weather.py  solar_term.py
backend/app/services/day_insight/: compute.py  extremes.py  label_rules.py  service.py  side_badges.py
backend/app/utils/: __init__.py  geo.py
backend/tests/: test_analytics.py  test_api_stations.py  test_cwa_sync.py  test_day_insight_compute.py  test_day_insight_extremes.py  test_day_insight_label_rules.py  test_day_insight_schemas.py  test_day_insight_service.py  test_day_insight_side_badges.py  test_divination_narrator.py  test_four_methods.py  test_geo.py  test_hexagram_table.py  test_line_mapping.py  test_lunar.py  test_var_yao_ci_construction.py  test_weather_persona_population.py  test_yao_ci_table.py
(+81 files in other folders)
